@@ -73,6 +73,7 @@ bool ShowFPS = false;
 double PrintFPS = 0.0;
 bool GameplayPoundByAltRun = false;
 bool GameplayShakeScreenThwomp = true;
+bool GameplayShakeScreenBowserIIIrd = true;
 bool GameplayShakeScreenPound = true;
 bool JoystickEnableRumble = true;
 bool JoystickEnableBatteryStatus = true;
