@@ -142,6 +142,7 @@ void OpenConfig()
         config.beginGroup("effects");
         config.read("enable-thwomp-screen-shake", GameplayShakeScreenThwomp, true);
         config.read("enable-yoshi-ground-pound-screen-shake", GameplayShakeScreenPound, true);
+        config.read("enable-bowser-iiird-screen-shake", GameplayShakeScreenBowserIIIrd, true);
         config.endGroup();
 
         config.beginGroup("joystick");
@@ -266,6 +267,7 @@ void SaveConfig()
     config.beginGroup("effects");
     config.setValue("enable-thwomp-screen-shake", GameplayShakeScreenThwomp);
     config.setValue("enable-yoshi-ground-pound-screen-shake", GameplayShakeScreenPound);
+    config.setValue("enable-bowser-iiird-screen-shake", GameplayShakeScreenBowserIIIrd);
     config.endGroup();
 
     config.beginGroup("joystick");
