@@ -25,6 +25,7 @@ Changes for 1.3.4.1
 -Sprout vine from blocks got an individual sound
 -Fixed an incorrect word wrapping at message boxes
 -Fixed the thwomp's ground pound dirt effect being inproperly aligned
+-Bowser III'rd will shake the screen on his ground pount
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
